trigger deploy for debug

--- a/src/web/index.html
+++ b/src/web/index.html
@@ -1,6 +1,4 @@
 <!DOCTYPE html>
-<!-- Tests update -->
-
 <html lang="ja">
 <head>
     <meta charset="UTF-8" />
@@ -244,3 +242,5 @@
 
 </body>
 </html>
+
+<!-- deployed at 2026-01-21 09:25 -->
