--- a/src/web/customer/add-confirm.html
+++ b/src/web/customer/add-confirm.html
@@ -35,6 +35,8 @@
   </div>
 
   <script type="module">
+    import config from "../config.js";
+    console.log("config:", config);
     // localStorageからデータを取得
     const customer = JSON.parse(localStorage.getItem('customer'));
 
@@ -52,7 +54,7 @@
 
     // 登録ボタン
     document.getElementById('submitBtn').addEventListener('click', () => {
-      fetch('http://localhost:5440/add-customer', {
+      fetch(`${config.apiUrl}/add-customer`, {
         method: 'POST',
         headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
         body: new URLSearchParams(customer)
